// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledComponent matches the snapshot 1`] = `
.c0 {
  margin: 16px 0;
  border: 0;
  border-bottom: 1px solid #f1f1f1;
}

<div
  className="c0"
/>
`;

exports[`StyledComponent matches the snapshot when passing a border color 1`] = `
.c0 {
  margin: 16px 0;
  border: 0;
  border-bottom: 1px solid #ddd;
}

<div
  className="c0"
/>
`;

exports[`StyledComponent matches the snapshot when passing a margin 1`] = `
.c0 {
  margin: 32px 6px;
  border: 0;
  border-bottom: 1px solid #f1f1f1;
}

<div
  className="c0"
/>
`;
